--- a/Project.toml
+++ b/Project.toml
@@ -38,6 +38,6 @@ PrettyTables = "1.1.0"
 QuadGK = "2.4.1"
 RowEchelon = "0.2.1"
 Sobol = "1.5.0"
-SpecialFunctions = "1"
+SpecialFunctions = "1, 2"
 StatsFuns = "0.9.8"
 julia = "1.5"
