--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SFrontiers"
 uuid = "450466ac-e45e-40ce-9385-fade81a2016c"
 authors = ["Hung-Jen Wang <hjw.econ.1991@gmail.com>"]
-version = "0.2.1"
+version = "0.2.2"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -18,26 +18,24 @@ PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RowEchelon = "af85af4c-bcd5-5d23-b03a-a909639aa875"
-Sobol = "ed01d8cd-4d21-5b2a-85b4-cc3bdc58bad4"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-DataFrames = "1.2"
-DataStructures = "0.18"
-Distributions = "0.25"
-FLoops = "0.1.10"
-ForwardDiff = "0.10.19"
-HypothesisTests = "0.10"
-KahanSummation = "0.2"
-NLSolversBase = "7.8.1"
-Optim = "1.4.1"
-PrettyTables = "1.1.0"
-QuadGK = "2.4.1"
-RowEchelon = "0.2.1"
-Sobol = "1.5.0"
-SpecialFunctions = "1"
-StatsFuns = "0.9.8"
-julia = "1.5"
+DataFrames = "1"
+DataStructures = "0"
+Distributions = "0"
+FLoops = "0"
+ForwardDiff = "0"
+HypothesisTests = "0"
+KahanSummation = "0"
+LinearAlgebra = "1"
+NLSolversBase = "7"
+Optim = "1"
+PrettyTables = "2"
+QuadGK = "2"
+RowEchelon = "0"
+Statistics = "1"
+StatsFuns = "1"
