--- a/Project.toml
+++ b/Project.toml
@@ -25,17 +25,17 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 DataFrames = "1"
-DataStructures = "0"
-Distributions = "0"
-FLoops = "0"
-ForwardDiff = "0"
-HypothesisTests = "0"
-KahanSummation = "0"
+DataStructures = "0.1, <1"
+Distributions = "0.1, <2"
+FLoops = "0.1, <1"
+ForwardDiff = "0.1, <1"
+HypothesisTests = "0.1, <1"
+KahanSummation = "0.1, <1"
 LinearAlgebra = "1"
 NLSolversBase = "7"
 Optim = "1"
 PrettyTables = "2"
 QuadGK = "2"
-RowEchelon = "0"
+RowEchelon = "0.1, <1"
 Statistics = "1"
 StatsFuns = "1"
