--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SFrontiers"
 uuid = "450466ac-e45e-40ce-9385-fade81a2016c"
 authors = ["Hung-Jen Wang <hjw.econ.1991@gmail.com>"]
-version = "0.2.6"
+version = "0.2.7"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -24,18 +24,18 @@ StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-DataFrames = "1"
-DataStructures = "0.1, <1"
-Distributions = "0.1, <2"
-FLoops = "0.1, <1"
-ForwardDiff = "0.1, <1"
-HypothesisTests = "0.1, <1"
-KahanSummation = "0.1, <1"
-LinearAlgebra = "1"
-NLSolversBase = "7"
-Optim = "1"
-PrettyTables = "2"
-QuadGK = "2"
-RowEchelon = "0.1, <1"
-Statistics = "1"
-StatsFuns = "1"
+DataFrames = "1.0 - 1.9"
+DataStructures = "0.1 - 0.9"
+Distributions = "0.1 - 1.9"
+FLoops = "0.1 - 0.9"
+ForwardDiff = "0.1 - 0.9"
+HypothesisTests = "0.1 - 0.9"
+KahanSummation = "0.1 - 0.9"
+LinearAlgebra = "1.0 - 1.9"  
+NLSolversBase = "7.0 - 7.9"
+Optim = "1.0 - 1.9"
+PrettyTables = "2.0 - 2.9"
+QuadGK = "2.0 - 2.9"
+RowEchelon = "0.1 - 0.9"
+Statistics = "1.0 - 1.9"  
+StatsFuns = "1.0 - 1.9"
