--- a/Project.toml
+++ b/Project.toml
@@ -25,8 +25,8 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 DataFrames = "1.0 - 1.9"
-DataStructures = "0.1 - 0.9"
-Distributions = "0.1 - 1.9"
+DataStructures = "0.1 - 1.9"
+Distributions = "0.1 - 1.0"
 FLoops = "0.1 - 0.9"
 ForwardDiff = "0.1 - 0.9"
 HypothesisTests = "0.1 - 0.9"
@@ -37,5 +37,6 @@ Optim = "1.0 - 1.9"
 PrettyTables = "2.0 - 2.9"
 QuadGK = "2.0 - 2.9"
 RowEchelon = "0.1 - 0.9"
+SpecialFunctions = "2.4 - 3.0"
 Statistics = "1.0 - 1.9"  
 StatsFuns = "1.0 - 1.9"
