--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Hung-Jen Wang <hjw.econ.1991@gmail.com>"]
 version = "0.2.7"
 
 [deps]
+Julia = ">=1.6, <2.0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
