--- a/Project.toml
+++ b/Project.toml
@@ -20,9 +20,10 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 
 [compat]
+julia = "1.6 - 1"
 DataFrames = "1.0 - 1.9"
-DataStructures = "0.1 - 1.9"
-Distributions = "0.1 - 1.0"
+DataStructures = "0.1 - 1"
+Distributions = "0.1 - 1"
 FLoops = "0.1 - 0.9"
 ForwardDiff = "0.1 - 0.9"
 HypothesisTests = "0.1 - 0.9"
