--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SFrontiers"
 uuid = "450466ac-e45e-40ce-9385-fade81a2016c"
 authors = ["Hung-Jen Wang <hjw.econ.1991@gmail.com>"]
-version = "0.2.14"
+version = "0.2.15"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -20,18 +20,18 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 
 [compat]
-julia = "1.8 - 1.12"
-DataFrames = "1.0 - 1.9"
-DataStructures = "0.16 - 0.19"
+julia = "1.9" 
+DataFrames = "1.6 - 1.9"
+DataStructures = "0.18 - 0.20"
 Distributions = "0.24 - 0.26"
-FLoops = "0.1 - 0.9"
-ForwardDiff = "0.10 - 0.20"
-HypothesisTests = "0.1 - 0.9"
+FLoops = "0.2 - 0.4"
+ForwardDiff = "0.10 - 0.12"
+HypothesisTests = "0.9 - 0.13"
 KahanSummation = "0.1 - 0.9"
 NLSolversBase = "7.0 - 7.9"
-Optim = "1.0 - 1.9"
-PrettyTables = "2.0 - 2.9"
-QuadGK = "2.0 - 2.9"
-RowEchelon = "0.1 - 0.9"
+Optim = "1.7 - 1.9"
+PrettyTables = "2.4 - 2.5"
+QuadGK = "2.5 - 2.11"
+RowEchelon = "0.2 - 0.3"
 SpecialFunctions = "2.4 - 3.0"
-StatsFuns = "1.0 - 1.9"
+StatsFuns = "1.1 - 1.5"
